<resources>
    <string name="auto_crop">AutoCrop</string>
    <string name="select_screenshots">SELECT SCREENSHOTS</string>
    <string name="menu_item_divider_saving">Saving</string>
    <string name="menu_item_divider_other">Other</string>
    <string name="menu_item_auto_scroll">AutoScroll on Entry</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_save_dir">Save Directory</string>
    <string name="cropping_dot_dot_dot">Cropping…</string>
    <string name="fraction">%1$d/%2$d</string>
    <string name="processing_crops">Processing crops…</string>
    <string name="cropping_failure">No Crop Borders found</string>
    <string name="cancel_autoscroll">Cancel Scroll</string>
    <string name="discarding_statistics"><![CDATA[Removed <b>%1$s</b>=<b>%2$s</b>]]></string>
    <string name="cropping_failure_instruction_text_view">Make sure the selected screenshot(s) comprise sudden color gradient changes across their vertical axis, and/or try a different crop sensitivity!</string>
    <string name="version">Version: %1$s</string>
    <string name="copyright">© 2021-%1$d | Janek Zangenberg</string>
    <string name="got_it">Got it!</string>
    <string name="crop_transition_name">CROP_TRANSITION</string>
    <string name="all_crops">All Crops</string>
    <string name="current_crop">Current Crop</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="source">Source</string>
    <string name="share_crops">Share Crops</string>
    <string name="main_menu_toggle">Toggle main menu</string>
    <string name="compare_crop_and_original_screenshot">Compare crop and original screenshot</string>
    <string name="manually_adjust_the_crop">Manually adjust the crop</string>
    <string name="screenshot_listener">Screenshot Listener</string>
    <string name="screenshot_listening">Screenshot Listening</string>
    <string name="reset">Reset</string>
    <string name="original">Original</string>
    <string name="cropped">Cropped</string>
    <string name="apply_adjusted_crop_edges">Apply adjusted crop edges</string>
    <string name="discard_changes">Discard changes</string>
    <string name="screenshot_listener_description">Screenshot Listening lets you create and save crops through notifications, i.e., without having to open the app.\n\n
        If enabled, you will receive a notification whenever AutoCrop detects a newly taken, croppable screenshot - the saving/discarding of which you may then determine.\n\n
        To register new screenshots, Screenshot Listening requires the <i>media file read</i> permission.
    </string>
    <string name="onboarding_page_2_title">You\'re all set!</string>
    <string name="onboarding_page_2_description">Now go ahead select some screenshots, let the cropping magic happen and save your first AutoCrops!</string>
    <string name="enable">Enable</string>
    <string name="share">Share</string>
    <string name="discard_crop">Discard crop</string>
    <string name="save_crop">Save crop</string>
    <string name="discard_all_crops">Discard all crops</string>
    <string name="save_all_crops">Save all crops</string>
    <string name="all">All</string>
    <string name="current">Current</string>
    <string name="settings">Settings</string>
    <string name="cropping">Cropping</string>
    <string name="crop_settings">Crop Settings</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="comparison_instruction">Tap &amp; hold to view the original screenshot, release to view the cropped image</string>
    <string name="tap_again_to_cancel">Tap again to cancel</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="toggle_foreground_elements">Toggle foreground elements</string>
    <string name="open_popup_menu">Open popup menu</string>
    <string name="recrop_with_adjusted_settings">Recrop with adjusted Settings</string>
    <string name="recrop_all_with_adjusted_settings">Recrop all with adjusted Settings</string>
    <string name="recrop">Recrop</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="slide_to_select_the_crop_sensitivity">Slide to select the crop sensitivity</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="couldn_t_find_a_browser_to_open_the_url_with">Couldn\'t find a browser to open the URL with</string>
    <string name="tap_again_to_return_to_main_screen">Tap again to return to main screen</string>
    <string name="adjusted_crop">Adjusted crop</string>
    <string name="wait_until_crops_have_been_saved">Wait until crops have been saved</string>
    <string name="content_provider_not_supported_please_select_a_different_one">Content provider not supported. Please select a different one</string>
    <string name="crops_will_be_saved_to">"Crops will be saved to "</string>
    <string name="directory_didn_t_change">Directory didn\'t change</string>
    <string name="media_file_writing_required_for_saving_crops">Media file writing required for saving crops</string>
    <string name="go_to_app_settings_and_grant_media_file_writing_in_order_for_the_app_to_work">Go to app settings and grant media file writing in order for the app to work</string>
    <string name="comparison_screen">Comparison Screen</string>
    <string name="no_crop_edges_found_for_adjusted_settings">No Crop Edges found for adjusted Settings</string>
    <string name="updated_crop">Updated Crop</string>
    <string name="saved_crop">Saved crop</string>
    <string name="updated_crop_settings">Updated Crop Settings</string>
    <string name="no_discard_all">No, discard all</string>
    <string name="delete_corresponding_screenshots">Delete corresponding screenshots</string>
    <string name="crops_procedure_dialog_title">Save %1$d crops?</string>
    <plurals name="screenshot">
        <item quantity="one">screenshot</item>
        <item quantity="other">screenshots</item>
    </plurals>
    <plurals name="crop">
        <item quantity="one">crop</item>
        <item quantity="other">crops</item>
    </plurals>
</resources>
