<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/status_bar_height_approximated"
    android:paddingBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:id="@+id/all_crops_buttons_w_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_rectangle_w_button_background"
            android:paddingVertical="@dimen/margin_button_row"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/discard_all_button"
                android:layout_width="@dimen/size_image_button"
                android:layout_height="@dimen/size_image_button"
                android:layout_marginHorizontal="@dimen/margin_button_row"

                android:background="@drawable/ic_cancel_24"
                android:backgroundTint="@color/higher_light"

                android:contentDescription="@string/discard_all_crops" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save_all_button"
                android:layout_width="@dimen/size_image_button"
                android:layout_height="@dimen/size_image_button"
                android:layout_marginHorizontal="@dimen/margin_button_row"

                android:background="@drawable/ic_save_24"
                android:backgroundTint="@color/higher_light"

                android:contentDescription="@string/save_all_crops" />

            <!--                <com.google.android.material.divider.MaterialDivider-->
            <!--                    android:layout_width="1dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_marginHorizontal="2dp"-->
            <!--                    android:layout_marginVertical="2dp"-->
            <!--                    app:dividerColor="@color/low_alpha_gray" />-->

            <!--                <androidx.appcompat.widget.AppCompatImageButton-->
            <!--                    android:id="@+id/recrop_all_button"-->
            <!--                    android:layout_width="@dimen/size_image_button"-->
            <!--                    android:layout_height="@dimen/size_image_button"-->
            <!--                    android:layout_marginHorizontal="@dimen/margin_button_row"-->

            <!--                    android:background="@drawable/ic_autorenew_24"-->
            <!--                    android:backgroundTint="@color/higher_light"-->

            <!--                    android:contentDescription="@string/manually_adjust_the_crop" />-->
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.w2sv.autocrop.ui.designsystem.FractionTextView
            android:id="@+id/page_indication_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:text="@string/fraction"
            android:textColor="@color/crop_pager_text"
            android:textSize="@dimen/text_size_medium"
            tools:text="9/12" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_medium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/surface_on_black_background" />

        <ProgressBar
            android:id="@+id/recrop_progress_bar"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/shape_progress_bar_save_all"
            android:visibility="gone" />
    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_medium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_small">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_auto_scroll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/shape_rounded_rectangle_w_button_background"
            android:padding="14dp"

            android:text="@string/cancel_autoscroll"
            android:textColor="@color/highlight"
            android:textSize="@dimen/text_size_medium"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/current_crop_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/discarding_statistics_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/discarding_statistics"
                android:textColor="@color/crop_pager_text"
                android:textSize="@dimen/text_size_small"
                tools:text="Removed 11%=8kb"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!--Button Row-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded_rectangle_w_button_background"
                android:paddingVertical="@dimen/margin_button_row">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/discard_crop_button"
                    android:layout_width="@dimen/size_image_button"
                    android:layout_height="@dimen/size_image_button"
                    android:layout_marginHorizontal="@dimen/margin_button_row"

                    android:background="@drawable/ic_cancel_24"
                    android:backgroundTint="@color/highlight"

                    android:contentDescription="@string/discard_crop" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/save_crop_button"
                    android:layout_width="@dimen/size_image_button"
                    android:layout_height="@dimen/size_image_button"
                    android:layout_marginHorizontal="@dimen/margin_button_row"

                    android:background="@drawable/ic_save_24"
                    android:backgroundTint="@color/highlight"

                    android:contentDescription="@string/save_crop" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginVertical="2dp"
                    app:dividerColor="@color/low_alpha_gray" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/comparison_button"
                    android:layout_width="@dimen/size_image_button"
                    android:layout_height="@dimen/size_image_button"
                    android:layout_marginHorizontal="@dimen/margin_button_row"

                    android:background="@drawable/ic_inspect_image_24"
                    android:backgroundTint="@color/highlight"

                    android:contentDescription="@string/compare_crop_and_original_screenshot" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginVertical="2dp"
                    app:dividerColor="@color/low_alpha_gray" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/recrop_button"
                    android:layout_width="@dimen/size_image_button"
                    android:layout_height="@dimen/size_image_button"
                    android:layout_marginHorizontal="@dimen/margin_button_row"

                    android:background="@drawable/ic_autorenew_24"
                    android:backgroundTint="@color/highlight"

                    android:contentDescription="@string/manually_adjust_the_crop" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/manual_crop_button"
                    android:layout_width="@dimen/size_image_button"
                    android:layout_height="@dimen/size_image_button"
                    android:layout_marginHorizontal="@dimen/margin_button_row"

                    android:background="@drawable/ic_crop_24"
                    android:backgroundTint="@color/highlight"

                    android:contentDescription="@string/manually_adjust_the_crop" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>