<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cropping_unsuccessful_text_view"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"

        android:layout_marginTop="180dp"

        android:maxLines="1"
        android:text="@string/cropping_failure"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="22sp"
        android:textStyle="italic" />

    <ImageView
        android:layout_width="@dimen/error_icon_cropping_failure_screen"

        android:layout_height="@dimen/error_icon_cropping_failure_screen"
        android:layout_alignStart="@+id/cropping_unsuccessful_text_view"

        android:layout_alignBottom="@+id/cropping_unsuccessful_text_view"
        android:layout_marginStart="@dimen/error_icon_cropping_failure_horizontal_margin"
        android:layout_marginBottom="@dimen/error_icon_cropping_failure_vertical_margin"
        android:contentDescription="@null"

        android:src="@drawable/ic_error_24" />

    <ImageView
        android:layout_width="@dimen/error_icon_cropping_failure_screen"

        android:layout_height="@dimen/error_icon_cropping_failure_screen"
        android:layout_alignEnd="@+id/cropping_unsuccessful_text_view"

        android:layout_alignBottom="@+id/cropping_unsuccessful_text_view"
        android:layout_marginEnd="@dimen/error_icon_cropping_failure_horizontal_margin"
        android:layout_marginBottom="@dimen/error_icon_cropping_failure_vertical_margin"
        android:contentDescription="@null"

        android:src="@drawable/ic_error_24" />

    <TextView
        android:id="@+id/cropping_unsuccessful_instruction"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"

        android:gravity="center"

        android:text="@string/cropping_failure_instruction_text_view"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/got_it_button"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"

        android:background="@color/magenta_saturated"

        android:text="@string/got_it"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic" />
</RelativeLayout>