<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.35" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <ImageView
            android:layout_width="@dimen/size_image_button"
            android:layout_height="@dimen/size_image_button"
            android:contentDescription="@null"

            android:src="@drawable/ic_error_24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:maxLines="1"
            android:text="@string/cropping_failure"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium_large"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <ImageView
            android:layout_width="@dimen/size_image_button"
            android:layout_height="@dimen/size_image_button"
            android:contentDescription="@null"

            android:src="@drawable/ic_error_24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.1" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/margin_horizontal_large"

        android:text="@string/cropping_failure_instruction_text_view"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <Button
        android:id="@+id/got_it_button"

        android:layout_width="120dp"
        android:layout_height="50dp"

        android:background="@drawable/shape_button_oval_magenta_dark"

        android:text="@string/got_it"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="italic" />
</LinearLayout>